fix inline toolbar alignment issue

--- a/draft-js-inline-toolbar-plugin/src/toolbarStyles.css
+++ b/draft-js-inline-toolbar-plugin/src/toolbarStyles.css
@@ -1,6 +1,7 @@
 .toolbar {
   left: 50%;
-  transform: translate(-50%) scale(0);
+  /*transform: translate(-50%) scale(0);*/
+  transform: scale(0);
   position: absolute;
   border: 1px solid #ddd;
   background: #fff;
@@ -8,6 +9,7 @@
   box-shadow: 0px 1px 3px 0px rgba(220,220,220,1);
   z-index: 2;
   box-sizing: border-box;
+  display: flex;
 }
 
 .toolbar:after, .toolbar:before {
